@@ -5702,4 +5702,7 @@ name)/mark
    abd
    xyd 
 
+/(?:((abcd))|(((?:(?:(?:(?:abc|(?:abcdef))))b)abcdefghi)abc)|((*ACCEPT)))/
+    1234abcd
+
 # End of testinput1 
